deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: myapp
  labels:
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: mydeployapp
        image: newapp:v1
        # env:
        #   - name: DB-PORT
        #     valueFrom:
        #       configMapKeyRef:
        #         name: vaibhav-cm
        #         key: db-port
        volumeMounts:
          - name: db-connection
            mountPath: /opt
        ports:
        - containerPort: 5000
      
      volumes:
        - name: db-connection
          configMap:
            name: vaibhav-cm
