ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flask-app
spec:
  rules:
  - host: "vaibhav.flask.app.com"
    http:
      paths:
      - pathType: Prefix
        path: "/myapp"
        backend:
          service:
            name: my-service
            port:
              number: 80
